--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ body {
   transition: all 0.3s ease;
 }
 
+.menu__link:hover {
+  color: #d4416a;
+}
+
 .menu__link:hover::before {
   width: 50%;
 }
@@ -65,6 +69,8 @@ body {
   line-height: 2;
   font-weight: bold;
   position: relative;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .menu__phone-wrap {
@@ -80,6 +86,8 @@ body {
 .menu__phone span {
   color: #656463;
   font-weight: normal;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .menu__phone:before {
@@ -92,6 +100,14 @@ body {
   -webkit-transform: translateY(-50%) rotate(90deg);
           transform: translateY(-50%) rotate(90deg);
   position: absolute;
+  color: #d4416a;
+}
+
+.menu__phone:hover {
+  color: #d4416a;
+}
+
+.menu__phone:hover span {
   color: #d4416a;
 }
 
