--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,31 @@ body {
   height: calc(100% - 25px);
 }
 
+.banner__price {
+  font-size: 18px;
+  color: white;
+  text-transform: uppercase;
+  line-height: 0.857;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  top: 9.1%;
+  left: 14.1%;
+  -webkit-transform: rotate(18deg);
+          transform: rotate(18deg);
+}
+
+.banner__price span:first-of-type {
+  margin-bottom: 10px;
+  font-size: 28px;
+}
+
 .banner__content {
   max-width: 600px;
   text-align: center;
@@ -176,6 +201,11 @@ body {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+.banner__product > img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .banner__desc {
@@ -317,6 +347,13 @@ body {
     height: 47px;
     font-size: 14px;
   }
+  .banner__price {
+    font-size: 12px;
+  }
+  .banner__price span:first-of-type {
+    font-size: 19px;
+    margin-bottom: 6px;
+  }
   .about__product {
     width: 180px;
   }
@@ -384,6 +421,12 @@ body {
     bottom: -9px;
     height: 60%;
   }
+  .banner__price {
+    font-size: 10px;
+  }
+  .banner__price span:first-of-type {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -427,6 +470,17 @@ body {
     height: 80vw;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
+  }
+  .banner__product > img {
+    max-width: none;
+  }
+  .banner__price {
+    font-size: 3vw;
+    top: 10%;
+    left: 15.1%;
+  }
+  .banner__price span:first-of-type {
+    font-size: 4vw;
   }
   .banner__btn {
     margin: auto;
